fix(calendar): adjusted calendar and removed wrappers

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -91,6 +91,10 @@ select {
   color: var(--primary);
 }
 
+.rdp-root {
+  --rdp-accent-color: var(--background);
+}
+
 /* change scroll bars layout */
 
 *::-webkit-scrollbar {
